--- a/.github/workflows/create_project.yml
+++ b/.github/workflows/create_project.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Ccreate Project Board
+name: Create Project Board
 
 # Controls when the workflow will run
 on:
