--- a/.github/workflows/create_project.yml
+++ b/.github/workflows/create_project.yml
@@ -7,7 +7,7 @@ on:
 
   workflow_dispatch:
 
-
+## Creates Github Project for Sandbox Environment
 jobs:
   create-project:
     runs-on: ubuntu-latest
