--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -1,25 +1,23 @@
 name: CD Deployment/Evaluation Feature Branche Push
 
 on:
-
+  ## Execute on Master Branche Push/Commit
   push:
+    
     branches: [ dev ]
 
-  # On Manual Dispatch
+  # Execute Manually
   workflow_dispatch:
   
   
 env:
   ## Sets environment variables
-  GITHUB_PROJECT_URL: "" 
-  DOCKER_REPO_URL: ""
-  DT_URL: ""
-  DT_MZ_ID: ""
-  DT_DEV_DB_ID: ""
-  DT_STAGING_DB_ID: ""
-  DT_PROD_DB_ID: ""
-  DT_PRE_DB_ID: ""
-  DOCKER_TAG: ""
+  ## These Variables are used to display the links in the Workflow Tasks, 
+  ## unfortunately this cant be done with github secrets, which makes sense since that could turn into a security problem
+  GITHUB_PROJECT_URL: "https://github.com/danatrace/pacmanservice/projects/2" 
+  DOCKER_REPO_URL: "https://hub.docker.com/repository/docker/danatrace/continuousimprovement"
+  DT_URL: "https://ozw11698.live.dynatrace.com"
+  DOCKER_TAG: "danatrace/continuousimprovement"
   
   
   
@@ -28,7 +26,7 @@ env:
 jobs:
 
     
-
+  ## Open a Trakcing/Documentation issue linked in the Github Project for Feedback loop
   Open-Tracking-Issue:
        
        runs-on: dynatracedemo
@@ -40,6 +38,10 @@ jobs:
        outputs:
             output1: ${{ steps.create-issue.outputs.number }}
             output2: ${{ steps.set_ip.outputs.publicip }}
+            DT_DEV_DB_ID: ${{ steps.get_variables_db.outputs.dt_dev_db_id }}
+            DT_MZ_ID: ${{ steps.get_variables_mz.outputs.dt_mz_id}}
+
+            
        steps:
  
        - name: Set Release Version Variable
@@ -49,6 +51,19 @@ jobs:
                echo "build_version=$build_version" >> "$GITHUB_ENV"
                export publicip=$(curl http://checkip.amazonaws.com)               
                echo "::set-output name=publicip::$publicip"
+               
+       - name: Set Dashboard Id Variable
+         id: get_variables_db
+         run: |
+              export dt_dev_db_id=$(curl -X GET ${{ secrets.DT_API_URL }}/config/v1/dashboards -H 'Authorization: Api-Token ${{ secrets.DT_API_TOKEN }}' | jq -r '.[] | map(select(.name == "KQG;project=slo-evaluation;stage=dev;service=tnt-acer-svc"))| .[0].id')
+              echo $dt_dev_db_id
+              echo "::set-output name=dt_dev_db_id::$dt_dev_db_id"
+       - name: Set Mangement Zone Id Variable
+         id: get_variables_mz
+         run: |
+              export dt_mz_id=$(curl -L -X GET '${{ secrets.DT_API_URL }}/config/v1/managementZones' -H 'Authorization: Api-Token ${{ secrets.DT_API_TOKEN }}' | jq -r '.[] | map(select(.name == "Tenant: tnt-acer-svc")) | .[0].id')
+              echo $dt_mz_id
+              echo "::set-output name=dt_mz_id::$dt_mz_id"
         
        - name: Create Issue Action
          id: create-issue
@@ -58,7 +73,7 @@ jobs:
             token: ${{secrets.WORKFLOW_TOKEN}}
             assignees: ${{github.actor}}
             labels: documentation , Build ${{ github.run_number }}
-            body: <a href="${{ github.SERVER_URL }}/${{ github.REPOSITORY }}/actions/runs/${{ github.RUN_ID }}"> Workflow Monitor </a> <br> <a href="${{env.DT_URL}}/#dashboard;id=${{env.DT_DEV_DB_ID}};gf=${{env.DT_MZ_ID}};gtf=-10m"> Dynatrace Dev Evaluation Dashboard  </a> <br> <a href="${{secrets.DT_CA_URL}}/bridge/project/slo-evaluation/sequence"> Dynatrace Cloud automation  </a>
+            body: <a href="${{ github.SERVER_URL }}/${{ github.REPOSITORY }}/actions/runs/${{ github.RUN_ID }}"> Workflow Monitor </a> <br> <a href="${{ env.DT_URL }}/#dashboard;id=${{ steps.get_variables_db.outputs.dt_dev_db_id }};gf=${{ steps.get_variables_mz.outputs.dt_mz_id }};gtf=-10m"> Dynatrace Dev Evaluation Dashboard  </a> <br> <a href="${{secrets.DT_CA_URL}}/bridge/project/slo-evaluation/sequence"> Dynatrace Cloud automation  </a>
 
        - run: 'echo Created issue number ${{ steps.create-issue.outputs.number }}'
        
@@ -69,8 +84,18 @@ jobs:
             column-name: 🧑‍💻 In progress
             issue-number: ${{ steps.create-issue.outputs.number }}
 
-
-
+       - name: set_variable_files
+         run: |
+              rm -f /home/ec2-user/ghprojurl || true
+              rm -f /home/ec2-user/dockerrpurl || true
+              rm -f /home/ec2-user/dturl || true
+              rm -f /home/ec2-user/dockertag || true
+              echo ${{ env.GITHUB_PROJECT_URL }} >/home/ec2-user/ghprojurl
+              echo ${{ env.DOCKER_REPO_URL }} >/home/ec2-user/dockerrpurl
+              echo ${{ env.DT_URL }} >/home/ec2-user/dturl
+              echo ${{ env.DOCKER_TAG }} >/home/ec2-user/dockertag
+              
+  ## Build Container and push it to container Repository
   Build-Push-Container:
     runs-on: dynatracedemo
     environment:
@@ -117,6 +142,9 @@ jobs:
           body: |
                 :sparkles: simplenodeservice:${{ github.run_number }} was successful pushed to <a href="${{ env.DOCKER_REPO_URL }}"> Docker Hub </a> :sparkles:
 
+  ## Deploy New Build Container to Kubernetes CLuster 
+  ## Not Best practice as we use "Kubectl Replace", which deletes the current deployment and deploys the new build
+  ## In a real live scenario you would use the Rolling Update function of Kubernetes, but that would make the deployment task run for a long time 
   Deploy-Application:
     runs-on: dynatracedemo
     environment:
@@ -143,7 +171,7 @@ jobs:
         export KUBECONFIG=/etc/rancher/k3s/k3s.yaml
         echo "$(cat final_dev.yml)"
         kubectl replace -f final_dev.yml --force
-        kubectl wait --for=condition=available --timeout=120s --all deployments -A
+        kubectl wait --for=condition=available --timeout=120s --all deployments --namespace simplenodeservice-dev
         rm /home/ec2-user/variables || true
         rm /home/ec2-user/release || true
         rm /home/ec2-user/commitmsg || true
@@ -153,7 +181,8 @@ jobs:
         
 
         
-
+  # Run Simple Jemeter test
+  # If faildev is in the commit message this step will start linux stress to pruduce high memory and cpu usage to simulate how the SLO Evaluation captures that
   Run-Tests:
       runs-on: dynatracedemo
       needs: Deploy-Application
@@ -165,21 +194,32 @@ jobs:
       - name: set test start time
         id: set_start_time
         run: echo "::set-output name=startdate::$(date -d "$TIME - 5min" +"%Y-%m-%dT%H:%M:%S")"
-
-      - name: Run JMeter Action on a test
-        uses: rbhadti94/apache-jmeter-action@v0.5.0
-        with:
-          testFilePath: jmeter/basiccheck.jmx
-          outputReportsFolder: reports/
-          args: "--loglevel INFO"
         
+
+      - name: install jmeter
+        run: |
+          sudo amazon-linux-extras install java-openjdk11
+          java -version
+          wget https://downloads.apache.org/jmeter/binaries/apache-jmeter-5.5.zip
+          unzip apache-jmeter-5.5.zip
+          cd apache-jmeter-5.5/bin
+          ./jmeter -v
+          pwd     
+ 
+      - name: run jmx scripts
+        run: |
+         cd $GITHUB_WORKSPACE
+         cd $GITHUB_WORKSPACE/apache-jmeter-5.5/bin
+         ./jmeter -n -t $GITHUB_WORKSPACE/jmeter/basiccheck.jmx -l testreport.jtl
+
+         
       - name: Stress-Simulation-Cpu
         if: "contains(github.event.head_commit.message, 'faildev')"
         run: |
           sudo amazon-linux-extras install epel
           sudo yum install -y epel-release
           sudo yum install stress -y
-          sudo stress --cpu 32 --vm-bytes $(awk '/MemAvailable/{printf "%d\n", $2 * 0.9;}' < /proc/meminfo)k --vm-keep -m 1 -t 150s
+          sudo stress --cpu 32 --vm-bytes $(awk '/MemAvailable/{printf "%d\n", $2 * 0.9;}' < /proc/meminfo)k --vm-keep -m 1 -t 300s
           
       - name: Stress-Simulation-Cpu2
         if: "contains(github.event.head_commit.message, 'faildevlong')"
@@ -200,12 +240,12 @@ jobs:
 
 
           
-
+  ## Trigger Dynatrace Slo evaluation using start and end time of the testrun
   Dynatrace-Slo-Evaluation:
       runs-on: dynatracedemo
       environment:
         name: dev
-        url: ${{env.DT_URL}}/#dashboard;gtf=${{ env.startdate }}+02:00%20to%20${{ env.enddate }}+02:00;gf=${{env.DT_MZ_ID}};id=${{env.DT_DEV_DB_ID}}
+        url: ${{env.DT_URL}}/#dashboard;gtf=${{ env.startdate }}+02:00%20to%20${{ env.enddate }}+02:00;gf=${{ needs.Open-Tracking-Issue.outputs.DT_MZ_ID}};id=${{ needs.Open-Tracking-Issue.outputs.DT_DEV_DB_ID }}
       outputs:
               output1: ${{ steps.passvariable.outputs.EVALUATION_SCORE }}
               output2: ${{ steps.passvariable.outputs.keptnContext }}
@@ -220,7 +260,8 @@ jobs:
         env:
           ca_token: ${{ secrets.CA_TOKEN }} 
           EVALUATION_SCORE: $EVALUATION_SCORE
-   
+          DT_DEV_DB_ID: ${{ needs.Open-Tracking-Issue.outputs.DT_DEV_DB_ID }} 
+          DT_MZ_ID: ${{ needs.Open-Tracking-Issue.outputs.DT_MZ_ID}} 
         run: |
           trigger_evaluation()
           {
@@ -276,6 +317,9 @@ jobs:
              
        
       - name: Create comment
+        env:
+            DT_DEV_DB_ID: ${{ needs.Open-Tracking-Issue.outputs.DT_DEV_DB_ID }} 
+            DT_MZ_ID: ${{ needs.Open-Tracking-Issue.outputs.DT_MZ_ID}} 
         if: "${{ steps.passvariable.outputs.EVALUATION_SCORE >= 90 }}"
         uses: peter-evans/create-or-update-comment@v2
         with:
@@ -283,7 +327,7 @@ jobs:
             body: |
                   Simplenodeservice was successfully deployed to Dev <a href="http://${{ needs.Open-Tracking-Issue.outputs.output2 }}:8000/"> Simplenodeservice Dev </a> <br> Slo Evaluation has Passed with a Score of ${{ steps.passvariable.outputs.EVALUATION_SCORE }}% <a href="${{env.DT_URL}}/#dashboard;gtf=${{ env.startdate }}+02:00%20to%20${{ env.enddate }}+02:00;gf=${{env.DT_MZ_ID}};id=${{env.DT_DEV_DB_ID}}"> Dynatrace Slo Dashboard </a>
 
-
+  ## if evaluation fails create a new issue with the Results
   On-Fail-Create-Issue:
        runs-on: dynatracedemo
        environment:
@@ -300,10 +344,11 @@ jobs:
             token: ${{secrets.WORKFLOW_TOKEN}}
             assignees: ${{github.actor}}
             labels: Slo Evaluation Failed, Build ${{ github.run_number }}
-            body: Slo Evaluation Failed <a href="${{secrets.DT_CA_URL}}/bridge/project/slo-evaluation/service/tnt-acer-svc/context/${{ needs.Dynatrace-Slo-Evaluation.outputs.output2 }}"> Cloud Automation </a> <br> <a href="${{env.DT_URL}}/#dashboard;gtf=${{ needs.Dynatrace-Slo-Evaluation.outputs.output3 }}+02:00%20to%20$${{ needs.Dynatrace-Slo-Evaluation.outputs.output4 }}+02:00;gf=${{env.DT_MZ_ID}};id=${{env.DT_DEV_DB_ID}}"> Dynatrace Slo Dashboard </a>
+            body: Slo Evaluation Failed <a href="${{secrets.DT_CA_URL}}/bridge/project/slo-evaluation/service/tnt-acer-svc/context/${{ needs.Dynatrace-Slo-Evaluation.outputs.output2 }}"> Cloud Automation </a> <br> <a href="${{env.DT_URL}}/#dashboard;gtf=${{ needs.Dynatrace-Slo-Evaluation.outputs.output3 }}+02:00%20to%20${{ needs.Dynatrace-Slo-Evaluation.outputs.output4 }}+02:00;gf=${{ needs.Open-Tracking-Issue.outputs.DT_MZ_ID}};id=${{ needs.Open-Tracking-Issue.outputs.DT_DEV_DB_ID }}"> Dynatrace Slo Dashboard </a>
          env:
            EVALUATION_SCORE: ${{env.EVALUATION_SCORE}}
-
+           DT_DEV_DB_IDL: ${{ needs.Open-Tracking-Issue.outputs.DT_DEV_DB_ID }} 
+           DT_MZ_ID: ${{ needs.Open-Tracking-Issue.outputs.DT_MZ_ID}} 
            
        - name: Create or Update Project Card
          uses: peter-evans/create-or-update-project-card@v2
@@ -314,6 +359,9 @@ jobs:
            
            
        - name: Create comment
+         env:
+            DT_DEV_DB_IDL: ${{ needs.Open-Tracking-Issue.outputs.DT_DEV_DB_ID }} 
+            DT_MZ_ID: ${{ needs.Open-Tracking-Issue.outputs.DT_MZ_ID}} 
          uses: peter-evans/create-or-update-comment@v2
          with:
             issue-number: ${{ needs.Open-Tracking-Issue.outputs.output1 }}
@@ -345,7 +393,7 @@ jobs:
             issue-number: ${{ needs.Open-Tracking-Issue.outputs.output1 }}
             comment: Auto-closing issue
        
-
+  ## If Slo evaluation is successful merge the Dev branche with the Staging branche an start deployment to staging
   On-Success-Merge:
        runs-on: dynatracedemo
        environment:
