--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -5,7 +5,7 @@ name: CI/CD Deployment Staging
 # Controls when the workflow will run
 on:
 
-
+  ## Execute on Pull Request Closed
   pull_request_target:
     types:
       - closed
@@ -14,47 +14,75 @@ on:
 
   workflow_dispatch:
 
-env:
-  ## Sets environment variables
-  GITHUB_PROJECT_URL: "" 
-  DOCKER_REPO_URL: ""
-  DT_URL: ""
-  DT_MZ_ID: ""
-  DT_DEV_DB_ID: ""
-  DT_STAGING_DB_ID: ""
-  DT_PROD_DB_ID: ""
-  DT_PRE_DB_ID: ""
-  DOCKER_TAG: ""
-
-
 
 
 jobs:
 
-
+  ## Sets environment variables
+  ## These Variables are used to display the links in the Workflow Tasks, 
+  ## unfortunately this cant be done with github secrets, which makes sense since that could turn into a security problem  
+  
+  ## Open a Trakcing/Documentation issue linked in the Github Project for Feedback loop
   Open-Tracking-Issue:
        runs-on: dynatracedemo
        environment:
           name: staging
-          url: ${{env.GITHUB_PROJECT_URL}} 
+          url: ${{ steps.set_gh_url.outputs.gh_project_url }}
        outputs:
             output1: ${{ steps.create-issue.outputs.number }}
             output2: ${{ steps.set-version.outputs.build_version }}
             output3: ${{ steps.set_ip.outputs.publicip }}
+            DT_STAGING_DB_ID: ${{ steps.get_variables_db.outputs.dt_staging_db_id }}
+            DT_MZ_ID: ${{ steps.set_mgmt_zone.outputs.dt_mz_id}}
+            GITHUB_PROJECT_URL: ${{ steps.set_gh_url.outputs.gh_project_url }}
+            DT_URL: ${{ steps.set_dt_url.outputs.dt_url }}
+            DOCKER_TAG: ${{ steps.set_docker_tag.outputs.docker_tag}}
+
        steps:
-       - name: Set Release Version Variablea
+       - name: Set Public Ip variable
          id: set_ip
          run: |
-               export build_version=$(cat /home/ec2-user/release)
-               export cmtmsgt=$(cat /home/ec2-user/commitmsg)
-               echo $build_version
-               echo "build_version=$(echo $build_version)" >> "$GITHUB_ENV"
                export publicip=$(curl http://checkip.amazonaws.com)               
                echo "::set-output name=publicip::$publicip"
+
+
+       - name: Set Dashboard Id Variable
+         id: get_variables_db
+         run: |
+              export dt_staging_db_id=$(curl -X GET ${{ secrets.DT_API_URL }}/config/v1/dashboards -H 'Authorization: Api-Token ${{ secrets.DT_API_TOKEN }}' | jq -r '.[] | map(select(.name == "KQG;project=slo-evaluation;stage=staging;service=tnt-acer-svc"))| .[0].id')
+              echo $dt_dev_db_id
+              echo "::set-output name=dt_staging_db_id::$dt_staging_db_id"
+    
+       - name: Set Management zone Id Variable
+         id: set_mgmt_zone
+         run: |
+              export dt_mz_id=$(curl -L -X GET '${{ secrets.DT_API_URL }}/config/v1/managementZones' -H 'Authorization: Api-Token ${{ secrets.DT_API_TOKEN }}' | jq -r '.[] | map(select(.name == "Tenant: tnt-acer-svc")) | .[0].id')
+              echo $dt_mz_id
+              echo "::set-output name=dt_mz_id::$dt_mz_id"
+
+       - name: Set Github Url
+         id: set_gh_url
+         run: |
+              export gh_project_url=$(cat /home/ec2-user/ghprojurl)
+              echo "::set-output name=gh_project_url::$gh_project_url"
+              
+       - name: Set DT Url Variable
+         id: set_dt_url
+         run: |
+              export dt_url=$(cat /home/ec2-user/dturl)
+              echo "::set-output name=dt_url::$dt_url"
+    
+       - name: Set Docker Tag Variable
+         id: set_docker_tag
+         run: |
+              export dt_url=$(cat /home/ec2-user/dockertag)
+              echo "::set-output name=docker_tag::$dt_url"
                      
        - id: set-version
          run: |
-                echo "::set-output name=build_version::${{ env.build_version }}"
+              export build_version=$(cat /home/ec2-user/release)
+              echo $build_version
+              echo "::set-output name=build_version::$build_version"
         
        - name: Create Issue Action
          id: create-issue
@@ -64,7 +92,7 @@ jobs:
             token: ${{secrets.WORKFLOW_TOKEN}}
             assignees: ${{github.actor}}
             labels: documentation, Build ${{ steps.set-version.outputs.build_version }}
-            body: <a href="${{ github.SERVER_URL }}/${{ github.REPOSITORY }}/actions/runs/${{ github.RUN_ID }}"> Workflow Monitor </a> <br> <a href="${{env.DT_URL}}/#dashboard;id=${{env.DT_STAGING_DB_ID}};gf=${{env.DT_MZ_ID}};gtf=-10m"> Dynatrace Dev Evaluation Dashboard  </a> <br> <a href="${{secrets.DT_CA_URL}}/bridge/project/slo-evaluation/sequence"> Dynatrace Cloud automation  </a>
+            body: <a href="${{ github.SERVER_URL }}/${{ github.REPOSITORY }}/actions/runs/${{ github.RUN_ID }}"> Workflow Monitor </a> <br> <a href="${{ steps.set_dt_url.outputs.dt_url }}/#dashboard;id=${{ steps.get_variables_db.outputs.dt_staging_db_id }};gf=${{ steps.set_mgmt_zone.outputs.dt_mz_id}};gtf=-10m"> Dynatrace Dev Evaluation Dashboard  </a> <br> <a href="${{secrets.DT_CA_URL}}/bridge/project/slo-evaluation/sequence"> Dynatrace Cloud automation  </a>
 
        - run: |
            echo Created issue number ${{ steps.create-issue.outputs.number }}
@@ -77,7 +105,9 @@ jobs:
             issue-number: ${{ steps.create-issue.outputs.number }}
        
 
-        
+  ## Deploy New Build Container to Kubernetes CLuster 
+  ## Not Best practice as we use "Kubectl Replace", which deletes the current deployment and deploys the new build
+  ## In a real live scenario you would use the Rolling Update function of Kubernetes, but that would make the deployment task run for a long time         
   Deploy-Application:
     runs-on: dynatracedemo
     environment:
@@ -91,7 +121,7 @@ jobs:
       run: |
         export ct_version="${{ needs.Open-Tracking-Issue.outputs.output2 }}"
         export build_version=$(cat /home/ec2-user/release)
-        export dockertag="${{env.DOCKER_TAG}}"
+        export dockertag="${{ needs.Open-Tracking-Issue.outputs.DOCKER_TAG }}"
         rm -f rollback_staging.yaml || true 
         cp /home/ec2-user/final_staging.yml /home/ec2-user/rollback_staging.yaml  || true        
         rm -f final_staging.yml || true
@@ -106,10 +136,11 @@ jobs:
         echo "$(cat final_staging.yml)"
         kubectl replace -f final_staging.yml --force
         cp final_staging.yml /home/ec2-user/final_staging.yml
-        kubectl wait --for=condition=available --timeout=120s --all deployments -A
+        kubectl wait --for=condition=available --timeout=120s --all deployments --namespace simplenodeservice-staging
 
     
-  
+  # Run Simple Jemeter test
+  # If failstaging is in the commit message this step will start linux stress to pruduce high memory and cpu usage to simulate how the SLO Evaluation captures that  
   Run-Tests:
       runs-on: dynatracedemo
       needs: Deploy-Application
@@ -127,12 +158,11 @@ jobs:
           outputReportsFolder: reports/
           args: "--loglevel INFO"
           
-      - name: Run JMeter Action on a test
-        uses: rbhadti94/apache-jmeter-action@v0.5.0
-        with:
-          testFilePath: jmeter/simplenodeservice_perfcheck.jmx
-          outputReportsFolder: reports/
-          args: "--loglevel INFO"
+      - name: run jmx scripts
+        run: |
+         cd $GITHUB_WORKSPACE
+         cd $GITHUB_WORKSPACE/apache-jmeter-5.5/bin
+         ./jmeter -n -t $GITHUB_WORKSPACE/jmeter/simplenodeservice_load.jmx -l testreport.jtl
           
       - name: set var
         run: |
@@ -146,7 +176,7 @@ jobs:
           sudo amazon-linux-extras install epel
           sudo yum install -y epel-release
           sudo yum install stress -y
-          sudo stress --cpu 32 --vm-bytes $(awk '/MemAvailable/{printf "%d\n", $2 * 0.9;}' < /proc/meminfo)k --vm-keep -m 1 -t 150s
+          sudo stress --cpu 32 --vm-bytes $(awk '/MemAvailable/{printf "%d\n", $2 * 0.9;}' < /proc/meminfo)k --vm-keep -m 1 -t 300s
   
       - name: Stress-Simulation-Cpu
         if: "contains(env.cmtmsgt, 'failstaginglong')"
@@ -167,13 +197,13 @@ jobs:
         run: echo "::set-output name=enddate::$(date -d "$TIME - 0min" +"%Y-%m-%dT%H:%M:%S")"
     
           
-  
+  ## Trigger Dynatrace Slo evaluation using start and end time of the testrun
   Dynatrace-Slo-Evaluation:
  
     runs-on: dynatracedemo
     environment:
         name: staging
-        url: ${{env.DT_URL}}/#dashboard;gtf=${{ env.startdate }}+02:00%20to%20${{ env.enddate }}+02:00;gf=${{env.DT_MZ_ID}};id=${{env.DT_STAGING_DB_ID}}
+        url: ${{needs.Open-Tracking-Issue.outputs.DT_URL }}/#dashboard;gtf=${{ env.startdate }}+02:00%20to%20${{ env.enddate }}+02:00;gf=${{steps.get_variables_mz.outputs.dt_mz_id}};id=${{needs.Open-Tracking-Issue.outputs.DT_STAGING_DB_ID}}
     outputs:
             output1: ${{ steps.passvariable.outputs.EVALUATION_SCORE }}
             output2: ${{ steps.passvariable.outputs.kepncontext }}
@@ -239,7 +269,7 @@ jobs:
       with:
           issue-number: ${{ needs.Open-Tracking-Issue.outputs.output1 }}
           body: |
-               Simplenodeservice was successfully deployed to Staging <a href="http://${{ needs.Open-Tracking-Issue.outputs.output3 }}:8001/"> Simplenodeservice Staging </a> <br> Slo Evaluation has Passed with a Score of ${{ steps.passvariable.outputs.EVALUATION_SCORE }}% <a href="${{env.DT_URL}}/#dashboard;gtf=${{ env.startdate }}+02:00%20to%20${{ env.enddate }}+02:00;gf=${{env.DT_MZ_ID}};id=${{env.DT_STAGING_DB_ID}}"> Dynatrace Slo Dashboard </a>
+               Simplenodeservice was successfully deployed to Staging <a href="http://${{ needs.Open-Tracking-Issue.outputs.output3 }}:8001/"> Simplenodeservice Staging </a> <br> Slo Evaluation has Passed with a Score of ${{ steps.passvariable.outputs.EVALUATION_SCORE }}% <a href="${{needs.Open-Tracking-Issue.outputs.DT_URL }}/#dashboard;gtf=${{ env.startdate }}+02:00%20to%20${{ env.enddate }}+02:00;gf=${{steps.get_variables_mz.outputs.dt_mz_id}};id=${{needs.Open-Tracking-Issue.outputs.DT_STAGING_DB_ID}}"> Dynatrace Slo Dashboard </a>
 
       
     - name: Create or Update Project Card
@@ -263,12 +293,12 @@ jobs:
             issue-number: ${{ needs.Open-Tracking-Issue.outputs.output1 }}
     
          
-          
+  ## if evaluation fails create a new issue with the Results       
   On-Fail-Create-Issue:
        runs-on: dynatracedemo
        environment:
           name: staging
-          url: ${{env.GITHUB_PROJECT_URL}} 
+          url: ${{env.needs.Open-Tracking-Issue.outputs.GITHUB_PROJECT_URL}} 
        needs: [Dynatrace-Slo-Evaluation, Open-Tracking-Issue]
        if: "${{ needs.Dynatrace-Slo-Evaluation.outputs.output1 < 90 }}"
        steps:
@@ -280,7 +310,7 @@ jobs:
             token: ${{secrets.WORKFLOW_TOKEN}}
             assignees: ${{github.actor}}
             labels: Slo Evaluation Failed, Build ${{ needs.Open-Tracking-Issue.outputs.output2 }}
-            body: Slo Evaluation Failed <a href="${{secrets.DT_CA_URL}}/bridge/project/slo-evaluation/service/tnt-acer-svc/context/${{ needs.Dynatrace-Slo-Evaluation.outputs.output2 }}"> Cloud Automation </a> <br> <a href="${{env.DT_URL}}/#dashboard;gtf=${{ needs.Dynatrace-Slo-Evaluation.outputs.output3 }}+02:00%20to%20$${{ needs.Dynatrace-Slo-Evaluation.outputs.output4 }}+02:00;gf=${{env.DT_MZ_ID}};id=${{env.DT_STAGING_DB_ID}}"> Dynatrace Slo Dashboard </a>
+            body: Slo Evaluation Failed <a href="${{secrets.DT_CA_URL}}/bridge/project/slo-evaluation/service/tnt-acer-svc/context/${{ needs.Dynatrace-Slo-Evaluation.outputs.output2 }}"> Cloud Automation </a> <br> <a href="${{needs.Open-Tracking-Issue.outputs.DT_URL }}/#dashboard;gtf=${{ needs.Dynatrace-Slo-Evaluation.outputs.output3 }}+02:00%20to%20$${{ needs.Dynatrace-Slo-Evaluation.outputs.output4 }}+02:00;gf=${{steps.get_variables_mz.outputs.dt_mz_id}};id=${{needs.Open-Tracking-Issue.outputs.DT_STAGING_DB_ID}}"> Dynatrace Slo Dashboard </a>
          env:
            EVALUATION_SCORE: ${{env.EVALUATION_SCORE}}
            
@@ -295,7 +325,7 @@ jobs:
          uses: peter-evans/create-or-update-comment@v2
          with:
            issue-number: ${{ needs.Open-Tracking-Issue.outputs.output1 }}
-           body: Slo Evaluation Failed <a href="${{secrets.DT_CA_URL}}/bridge/project/slo-evaluation/service/tnt-acer-svc/context/${{ needs.Dynatrace-Slo-Evaluation.outputs.output2 }}"> Cloud Automation </a> <br> <a href="${{env.DT_URL}}/#dashboard;gtf=${{ needs.Dynatrace-Slo-Evaluation.outputs.output3 }}+02:00%20to%20$${{ needs.Dynatrace-Slo-Evaluation.outputs.output4 }}+02:00;gf=${{env.DT_MZ_ID}};id=${{env.DT_STAGING_DB_ID}}"> Dynatrace Slo Dashboard </a>
+           body: Slo Evaluation Failed <a href="${{secrets.DT_CA_URL}}/bridge/project/slo-evaluation/service/tnt-acer-svc/context/${{ needs.Dynatrace-Slo-Evaluation.outputs.output2 }}"> Cloud Automation </a> <br> <a href="${{needs.Open-Tracking-Issue.outputs.DT_URL }}/#dashboard;gtf=${{ needs.Dynatrace-Slo-Evaluation.outputs.output3 }}+02:00%20to%20$${{ needs.Dynatrace-Slo-Evaluation.outputs.output4 }}+02:00;gf=${{steps.get_variables_mz.outputs.dt_mz_id}};id=${{needs.Open-Tracking-Issue.outputs.DT_STAGING_DB_ID}}"> Dynatrace Slo Dashboard </a>
 
        - name: Create Label
          uses: andymckay/labeler@1.0.4
@@ -320,7 +350,8 @@ jobs:
           column-name: ✅ Done 
           issue-number: ${{ needs.Open-Tracking-Issue.outputs.output1 }}
 
-
+  ## if evaluation fails Rollback to previous version
+  ## Not best practive, best practice would be to use something like kubectl rollout undo daemonset <daemonset-name> --to-revision=<revision>
   On-Fail-Rollback:
        runs-on: dynatracedemo
        needs: [Dynatrace-Slo-Evaluation, Open-Tracking-Issue]
@@ -337,7 +368,8 @@ jobs:
                  
 
            
-               
+  ## On success open pull request and merge staging into production breanche, this immediatly starts deployment to production
+  ## There is an Approval step set on the environment, so before the merge can happen there needs to be an approval
   On-Success-Approval-Merge: 
        runs-on: dynatracedemo
        environment:
