--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,8 +39,39 @@ jobs:
                 "warnings": []
             }
             DATA
-      
-      ## Create Monaco Environment File
+
+
+      - name: monaco create env file
+        run: |
+           cd cloudautomation/monaco
+           cat << EOF > environments.yaml
+           demo:
+               - name: "demozones"
+               - env-url: "${{ secrets.DT_URL }}"
+               - env-token-name: "DT_API_TOKEN"    
+
+
+      - name: run Monaco
+        run: | 
+           export DEV_DB_ID=$(curl -X GET ${{ secrets.DT_API_URL }}/config/v1/dashboards -H 'Authorization: Api-Token ${{ secrets.DT_API_TOKEN }}' | jq -r '.[] | map(select(.name == "KQG;project=slo-evaluation;stage=dev;service=tnt-acer-svc"))| .[0].id')
+           export STAGING_DB_ID=$(curl -X GET ${{ secrets.DT_API_URL }}/config/v1/dashboards -H 'Authorization: Api-Token ${{ secrets.DT_API_TOKEN }}' | jq -r '.[] | map(select(.name == "KQG;project=slo-evaluation;stage=staging;service=tnt-acer-svc"))| .[0].id')
+           export PROD_DB_ID=$(curl -X GET ${{ secrets.DT_API_URL }}/config/v1/dashboards -H 'Authorization: Api-Token ${{ secrets.DT_API_TOKEN }}' | jq -r '.[] | map(select(.name == "KQG;project=slo-evaluation;stage=production;service=tnt-acer-svc"))| .[0].id')
+           export PRE_PROD_DB_ID=$(curl -X GET ${{ secrets.DT_API_URL }}/config/v1/dashboards -H 'Authorization: Api-Token ${{ secrets.DT_API_TOKEN }}' | jq -r '.[] | map(select(.name == "KQG;project=deployment-gates;stage=production;service=tnt-acer-svc"))| .[0].id')
+           export MGM_ZN=$(curl -L -X GET '${{ secrets.DT_API_URL }}/config/v1/managementZones' -H 'Authorization: Api-Token ${{ secrets.DT_API_TOKEN }}' | jq -r '.[] | map(select(.name == "Tenant: tnt-acer-svc")) | .[0].id')
+           export PUB_IP=$(curl http://checkip.amazonaws.com) 
+           export GH_REPO=${{ github.repository }}
+           export DT_API_TOKEN=${{ secrets.DT_API_TOKEN }}    
+           export CA_URL=${{secrets.DT_CA_URL}}
+           cd cloudautomation/monaco
+           curl -L https://github.com/dynatrace-oss/dynatrace-monitoring-as-code/releases/download/v1.7.0/monaco-linux-amd64 -o monaco
+           chmod +x monaco
+           # deploy repo folder
+           sudo mv monaco /usr/local/bin/
+           monaco --environments=environments.yaml -p demozones       
+     
+     
+     
+     ## Create Monaco Environment File
       - name: monaco create env file
         run: |
            cd cloudautomation/monaco
@@ -49,6 +80,7 @@ jobs:
                - name: "demo"
                - env-url: "${{ secrets.DT_URL }}"
                - env-token-name: "DT_API_TOKEN"    
+               
                
       # Run Monaco Import Management Zones
       - name: run Monaco
@@ -61,6 +93,7 @@ jobs:
             export PUB_IP=$(curl http://checkip.amazonaws.com) 
             export GH_REPO=${{ github.repository }}
             export DT_API_TOKEN=${{ secrets.DT_API_TOKEN }}
+            export CA_URL=${{secrets.DT_CA_URL}}
             cd cloudautomation/monaco
             curl -L https://github.com/dynatrace-oss/dynatrace-monitoring-as-code/releases/download/v1.7.0/monaco-linux-amd64 -o monaco
             chmod +x monaco
