--- a/cloudautomation/monaco/demozones/alerting-profile/alerting-profile.yaml
+++ b/cloudautomation/monaco/demozones/alerting-profile/alerting-profile.yaml
@@ -1,7 +1,4 @@
 config:
-- MemoryUsage: MemoryUsage.json
-- Cpuusage: Cpuusage.json
-Cpuusage:
-- name: Cpu usage
-MemoryUsage:
-- name: Memory Usage
+- Default: Default.json
+Default:
+- name: Default
